--- a/CaliforniaHousingProject.ipynb
+++ b/CaliforniaHousingProject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1LmKqBq0UaE7Mri4CyUwHo_9UcdQ3QLdy",
-      "authorship_tag": "ABX9TyNyrUY/YnURU9cJJdtIxva7",
+      "authorship_tag": "ABX9TyMbjyU6kzVvl05B8eklTrcc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 8,
       "metadata": {
         "id": "4TAWajHJqXPb"
       },
@@ -51,7 +51,7 @@
         "def load_housing_data(housing_path):\n",
         "    return pd.read_csv(\"/content/drive/MyDrive/California Housing Project/housing.csv\")"
       ],
-      "execution_count": 74,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "phQpOP11sBky"
       },
-      "execution_count": 75,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -76,9 +76,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "95b87f15-d75a-4185-a87a-9adca98c59fc"
+        "outputId": "94b0c26b-8684-42be-cbbe-acffd50ec0d5"
       },
-      "execution_count": 76,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2ce49d5e-959d-41c1-973f-99aabbbd137c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5c0e3907-8db4-42f9-af80-05bde484f3c3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -203,7 +203,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2ce49d5e-959d-41c1-973f-99aabbbd137c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c0e3907-8db4-42f9-af80-05bde484f3c3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -255,12 +255,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2ce49d5e-959d-41c1-973f-99aabbbd137c button.colab-df-convert');\n",
+              "        document.querySelector('#df-5c0e3907-8db4-42f9-af80-05bde484f3c3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2ce49d5e-959d-41c1-973f-99aabbbd137c');\n",
+              "        const element = document.querySelector('#df-5c0e3907-8db4-42f9-af80-05bde484f3c3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -280,8 +280,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-dfe8f28e-cd6c-4d34-9c5d-a5e78cd4003a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dfe8f28e-cd6c-4d34-9c5d-a5e78cd4003a')\"\n",
+              "    <div id=\"df-920aa97f-ea5e-4091-8984-b7318084213d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-920aa97f-ea5e-4091-8984-b7318084213d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -400,7 +400,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-dfe8f28e-cd6c-4d34-9c5d-a5e78cd4003a button');\n",
+              "            document.querySelector('#df-920aa97f-ea5e-4091-8984-b7318084213d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -417,7 +417,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 11
         }
       ]
     },
@@ -431,9 +431,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1faf3baf-6f41-4d33-aa4e-79072d390cb4"
+        "outputId": "254a30ab-4a26-4dd9-fd7c-8defcadb7435"
       },
-      "execution_count": 77,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +446,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 12
         }
       ]
     },
@@ -460,9 +460,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d134c78-281f-418e-cff9-92beb21e84e6"
+        "outputId": "c6aaf57e-10a0-4bf8-b17c-2175d3cbabe5"
       },
-      "execution_count": 78,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,9 +500,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
-        "outputId": "f0a96e7b-e254-4aad-e088-6e2c9b2e804a"
+        "outputId": "ad1d9f01-399b-4ef6-e2da-bdde302e63a2"
       },
-      "execution_count": 79,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +540,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-867ea0cd-c9e4-4566-8547-36c73df3d9b0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6dd95dbb-a1ef-4b24-ade0-b578cb7c8841\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -673,7 +673,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-867ea0cd-c9e4-4566-8547-36c73df3d9b0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6dd95dbb-a1ef-4b24-ade0-b578cb7c8841')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -725,12 +725,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-867ea0cd-c9e4-4566-8547-36c73df3d9b0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6dd95dbb-a1ef-4b24-ade0-b578cb7c8841 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-867ea0cd-c9e4-4566-8547-36c73df3d9b0');\n",
+              "        const element = document.querySelector('#df-6dd95dbb-a1ef-4b24-ade0-b578cb7c8841');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -750,8 +750,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b86d9521-f45c-4cee-80b8-0bef32aeaaab\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b86d9521-f45c-4cee-80b8-0bef32aeaaab')\"\n",
+              "    <div id=\"df-cfbd4b5a-7a51-4d47-ae7c-6eb7858245c7\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cfbd4b5a-7a51-4d47-ae7c-6eb7858245c7')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -870,7 +870,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b86d9521-f45c-4cee-80b8-0bef32aeaaab button');\n",
+              "            document.querySelector('#df-cfbd4b5a-7a51-4d47-ae7c-6eb7858245c7 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -886,7 +886,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 14
         }
       ]
     },
@@ -903,9 +903,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da8042d4-4ab1-4763-e06b-31ead72056ac"
+        "outputId": "2c3a21fa-bdac-45fe-aa2e-0c4248940d20"
       },
-      "execution_count": 80,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1112,9 +1112,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edddec5d-1f70-4d9b-d057-edcbb46e0133"
+        "outputId": "ba5a5a0d-9dec-468f-f0be-7b71ae109f39"
       },
-      "execution_count": 81,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1269,9 +1269,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 789
         },
-        "outputId": "93fc560f-d8e3-4f22-e469-b4847228c56e"
+        "outputId": "017e5c0a-3e68-4315-e655-fe5ed2d8a5c3"
       },
-      "execution_count": 82,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1323,9 +1323,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 622
         },
-        "outputId": "aeee2a8d-7c26-494c-9712-58d3225e2068"
+        "outputId": "ec26b2c1-514a-4ab4-916c-ba132805ce91"
       },
-      "execution_count": 83,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1350,9 +1350,9 @@
           "height": 484
         },
         "id": "aSS7UWUjgqEu",
-        "outputId": "d22b0225-5020-486e-b4d1-c771e0f9a42e"
+        "outputId": "ae34a692-3528-441a-82c4-28da088e5aea"
       },
-      "execution_count": 84,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1450,7 +1450,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 19
         }
       ]
     },
@@ -1464,7 +1464,7 @@
       "metadata": {
         "id": "DNpAVyuNsBNk"
       },
-      "execution_count": 85,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1477,9 +1477,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6590478-696a-459e-ab89-496637c7686a"
+        "outputId": "bc3ae236-984c-42a4-90c7-3eaa95dba956"
       },
-      "execution_count": 86,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,7 +1490,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 21
         }
       ]
     },
@@ -1511,9 +1511,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb000597-3bbc-4c7b-af48-d3b65d0de193"
+        "outputId": "38aa0640-f6b0-4732-fac2-7e2caf731dd1"
       },
-      "execution_count": 87,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1545,7 +1545,7 @@
       "metadata": {
         "id": "ePRZvIxQsA1f"
       },
-      "execution_count": 88,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1563,19 +1563,19 @@
           "height": 641
         },
         "id": "cpihVXXSiL_O",
-        "outputId": "20825f84-6a8e-46fa-f9f8-8ca9b3d6fceb"
+        "outputId": "7ca8329b-e788-4a47-f8fa-2c9dc787b2bc"
       },
-      "execution_count": 89,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7c545cebbef0>"
+              "<matplotlib.legend.Legend at 0x7e9155012690>"
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 24
         },
         {
           "output_type": "display_data",
@@ -1602,9 +1602,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KpBypgpkiL8h",
-        "outputId": "1c91e6ac-4fba-40ee-c5e2-608e02eb1537"
+        "outputId": "2f962476-5cab-4fd6-bdfd-373bee22a381"
       },
-      "execution_count": 90,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1634,9 +1634,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nFcWrs7FuiGo",
-        "outputId": "2c188fe2-8b63-47d5-c713-53f12daaa165"
+        "outputId": "c43fb595-8ba4-4c87-d533-7ecaa19fb7dc"
       },
-      "execution_count": 91,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1663,9 +1663,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HU4ZlcUht9MV",
-        "outputId": "69ef78bd-9886-4e06-d16c-87060999c89f"
+        "outputId": "01583499-16f1-4458-f150-3a5d03bc8d1c"
       },
-      "execution_count": 92,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,9 +1700,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rUnee--AyqYJ",
-        "outputId": "ca1758b4-6cda-4746-a8c1-8b71d4a7310d"
+        "outputId": "670821cb-446a-4b61-abe1-42d1ed853cb0"
       },
-      "execution_count": 71,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1710,12 +1710,12 @@
             "text/plain": [
               "Index(['longitude', 'latitude', 'housing_median_age', 'total_rooms',\n",
               "       'total_bedrooms', 'population', 'households', 'median_income',\n",
-              "       'ocean_proximity', 'income_cat'],\n",
+              "       'median_house_value', 'ocean_proximity', 'income_cat'],\n",
               "      dtype='object')"
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 28
         }
       ]
     },
@@ -1738,9 +1738,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gO2-QbWExGTd",
-        "outputId": "5269bc47-014f-40ee-9d45-986f498abe9e"
+        "outputId": "50aa54b8-273e-416d-cc8e-da13147dc1a8"
       },
-      "execution_count": 93,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1754,11 +1754,11 @@
           "data": {
             "text/plain": [
               "('/content/drive/MyDrive/California Housing Project/images/california.png',\n",
-              " <http.client.HTTPMessage at 0x7c545a50f830>)"
+              " <http.client.HTTPMessage at 0x7e914295e6c0>)"
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 29
         }
       ]
     },
@@ -1779,6 +1779,9 @@
         "                  c=housing['median_house_value'],  # Pass the actual column data here\n",
         "                  cmap=plt.get_cmap(\"jet\"),\n",
         "                  colorbar=False, alpha=0.4)\n",
+        "\n",
+        "# Load the california_img\n",
+        "california_img = mpimg.imread(os.path.join(images_path, filename))\n",
         "\n",
         "# The rest of your code\n",
         "plt.imshow(california_img, extent=[-124.55, -113.80, 32.45, 42.05], alpha=0.5,\n",
@@ -1804,9 +1807,9 @@
           "height": 648
         },
         "id": "vEpZR4uXxGQb",
-        "outputId": "df2be907-ed01-4cf8-f056-6c422711c4ec"
+        "outputId": "8395a891-eba2-4b5a-bcd1-2d3623217978"
       },
-      "execution_count": 97,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1841,9 +1844,9 @@
           "height": 619
         },
         "id": "Ll0m7RNJsP4N",
-        "outputId": "60cdd00f-80a6-483d-8c1c-7f1e4b6eea8c"
+        "outputId": "9c6522a4-cf54-47db-8221-1ab6bf0bd44c"
       },
-      "execution_count": 98,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1872,7 +1875,7 @@
       "metadata": {
         "id": "GheCyWRovwLS"
       },
-      "execution_count": 99,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1900,7 +1903,7 @@
       "metadata": {
         "id": "VKW_kes4sPg7"
       },
-      "execution_count": 100,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1918,9 +1921,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "siPv3xz5iL50",
-        "outputId": "4c8eb79a-4ee7-428f-b249-b4ec2ef3666c"
+        "outputId": "51de778f-7122-489a-8ebf-caf2c528ace2"
       },
-      "execution_count": 101,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1945,9 +1948,9 @@
           "height": 80
         },
         "id": "wQAJU4QaiL25",
-        "outputId": "6d7847a6-4a9a-4eb4-8bc4-26d80dec4d96"
+        "outputId": "6502d3f5-05d4-466b-f56e-932182b8e527"
       },
-      "execution_count": 59,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2375,7 +2378,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 39
         }
       ]
     },
@@ -2396,9 +2399,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OTQHHI7xiL0F",
-        "outputId": "18cadbc8-c19f-49c4-afc3-d954c67e1ad5"
+        "outputId": "a05f8789-756a-49b0-8407-9b2c1136cac3"
       },
-      "execution_count": 60,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -2428,9 +2431,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ayiVg26iLxZ",
-        "outputId": "8cc61fd4-5584-449f-a9c3-5fd97c07c3b0"
+        "outputId": "587eb9fe-dc58-44b1-ab45-08851e37b721"
       },
-      "execution_count": 61,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
