working on notebook as well

--- a/CaliforniaHousing.ipynb
+++ b/CaliforniaHousing.ipynb
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "f3976a2d-6e24-44e9-b4ef-4007b6b73f62",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "68a5ccef-af51-4725-a58c-135b4ece20bc",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "aebc9805-a619-4c90-ac67-910db014e358",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "id": "d34194bb-44fb-4229-a375-19f59878e269",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1313,7 @@
        "         0.        ,  0.        ]], shape=(16512, 13))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,11 +1324,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "94529c13-acbe-4444-ab9e-f62b17a1a4b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range: 6.0 to 39320.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "column_min = data['total_rooms'].min()\n",
+    "column_max = data['total_rooms'].max()\n",
+    "print(f\"Range: {column_min} to {column_max}\")\n"
+   ]
   },
   {
    "cell_type": "code",
